# Falcon-BMS-config-editor

./: README.md  package-lock.json  package.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/css/: base.css  layout.css  modals.css  settings.css
src/js/: config.js  controls.js  helpers.js  modal-add.js  modal-delete.js  schema.js  settings.js  state.js  ui.js
