[package]
name = "falcon-bms-config"
version = "0.1.0"
description = "Falcon BMS User Config Editor"
authors = ["you"]
edition = "2021"


[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
